Icons: Fix icons that were using the wrong color
(integrated from master branch change 9.2.1-1237-ge11e6ad by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -102,17 +102,17 @@
         {
             &.menu
             {
-                background-image: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?preset=hud) !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?scheme-color=icons-special) !important;
             }
     
             &.undo
             {
-                background-image: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?scheme-color=icons-special) !important;
             }
             
             &.close
             {
-                background-image: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?preset=hud) !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?scheme-color=icons-special) !important;
             }
         }
     }
